<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textHeader1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerTextOnRegistrationScreen"
        android:textColor="@color/customTextH1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/loginField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="130dp"
        android:hint="@string/hintLoginOnLoginPage"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textHeader1"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/passwordField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/hintPasswordOnLoginPage"
        android:minHeight="48dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/loginField1"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationNewUserBtn"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordField1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/fromDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>